# GenerateVideo

./: .env.example  .gitignore  LICENSE  README.md  README_CN_OLD.md  generate_video.py  main.py  model.json  pyproject.toml  requirements.txt  test_models.py  test_models_detailed.py
.claude/: settings.local.json
.omc/autopilot/: plan.md  spec.md
.omc/state/: autopilot-state.json  subagent-tracking.json
docs/: ISSUE_PACKAGE_INSTALLATION.md
examples/: sample_prompt.txt
input/: prompt.txt
output/: model.json  video_20260207_031256_b7516112.txt  video_url.txt
src/: __init__.py  api_client.py  cli.py  config.py  config.py.example  encoder.py  errors.py  video_saver.py
src/cli/: i2v.py  main.py  models.py  t2v.py
src/models/: __init__.py  catalog.py  selector.py
tests/: test_integration.py  test_models.py
