[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generatevideo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "moviepy>=2.2.1",
    "httpx",
    "rich",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
genvideo = "src.cli.main:cli"

[tool.setuptools]
packages = ["src", "src.cli", "src.models"]

[tool.setuptools.package-dir]
"" = "."
